@@ -13,4 +13,4 @@ rm -f */named.conf
 rm -f dig.out.test*
 rm -f ns2/example.com.bk
 rm -f ns2/example.net.bk
-rm -f ns*/managed-keys.bind*
+rm -f ns*/managed-keys.bind* ns*/*mkeys*
