@@ -451,6 +451,7 @@
 ./bin/tests/system/allow-query/tests.sh		SH	2010,2012,2013,2016,2018
 ./bin/tests/system/ans.pl			PERL	2011,2012,2014,2016,2017,2018
 ./bin/tests/system/auth/clean.sh		SH	2018
+./bin/tests/system/auth/ns1/chaos.db		ZONE	2018
 ./bin/tests/system/auth/ns1/example.com.db	ZONE	2018
 ./bin/tests/system/auth/ns1/example.net.db	ZONE	2018
 ./bin/tests/system/auth/ns1/named.conf.in	CONF-C	2018
