@@ -1,3 +1,6 @@
+5038.	[bug]		Chaosnet addresses were compared incorrectly.
+			[GL #562]
+
 5037.	[func]		"allow-recursion-on" and "allow-query-cache-on"
 			each now default to the other if only one of them
 			is set, in order to be more consistent with the way
